<resources>
    <string name="app_name">VoxMartCountryCode</string>

    <string name="select_country">Select Country</string>
    <string name="select_destination_country">From</string>
    <string name="to">To</string>
    <string name="logo_of_the_applicatiion">Logo of the application</string>
    <string name="input_the_number_you_want_to_dial">Input the number you want to dial</string>

    <string name="dial">Dial</string>
    <string name="country_codes">Country Codes</string>
    <string name="profile">Profile</string>
    <string name="parsed_number">Parsed Number</string>
    <string name="input_country_code">Input Country Code</string>
    <string name="country_name">Country Name</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
</resources>