<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialpad"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16sp">

    <ImageView
        android:id="@+id/imgFromCounntry"
        android:layout_width="40sp"
        android:layout_height="40sp"
        android:layout_marginStart="8dp"
        android:src="@drawable/globe"
        app:layout_constraintBottom_toBottomOf="@+id/tilPreferredLocation"
        app:layout_constraintStart_toEndOf="@+id/txtLabel"
        app:layout_constraintTop_toTopOf="@+id/tilPreferredLocation" />


    <ImageView
        android:id="@+id/imgDestinationCountry"
        android:layout_width="40sp"
        android:layout_height="40sp"
        android:src="@drawable/globe"
        app:layout_constraintBottom_toBottomOf="@+id/tilToCountry"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tilToCountry" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPreferredLocation"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgFromCounntry"
        app:layout_constraintTop_toTopOf="parent">

        <info.aliahmed.voxmartcountrycode.util.BetterSpinner
            android:id="@+id/spinnerFromCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/select_country"
            android:padding="14dp"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilToCountry"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/txtLabel"
        app:layout_constraintStart_toEndOf="@+id/imgDestinationCountry"
        app:layout_constraintTop_toTopOf="parent">

        <info.aliahmed.voxmartcountrycode.util.BetterSpinner
            android:id="@+id/spinnerToCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/select_destination_country"
            android:padding="14dp"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txtLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to"
        app:layout_constraintBottom_toBottomOf="@+id/tilToCountry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilNumber"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        app:layout_constraintTop_toBottomOf="@+id/tilToCountry"
        tools:layout_editor_absoluteX="16dp">

        <EditText
            android:id="@+id/edtDialedNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/input_the_number_you_want_to_dial"
            android:inputType="phone"
            android:padding="14dp"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>